--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,19 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-  Hey this is our Ramhacks App!!
+    <br>
+    <hr>
+    <ul>
+      <li><a href="/">myHome</a></li>
+      <li><a href="/myFinances">myFinances</a></li>
+      <li><a href="/myPersonalInfo">myPersonalInfo</a></li>
+      <li><a href="/myEducation">myEducation</a></li>
+      <li><a href="/myLoans">myLoans</a></li>
+      <li><a href="/myFamily">myFamily</a></li>
+      <li><a href="/myBudget">myBudget</a></li>
+      <li><a href="/myTaxes">myTaxes</a></li>
+      <li><a href="/myActionables">myActionables</a></li>
+    </ul>
   </body>
+
 </html>
