--- a/views/myActionables.ejs
+++ b/views/myActionables.ejs
@@ -3,10 +3,13 @@
 <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+
 </head>
 <body>
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
+
 <ul>
     <li><a href="/">myHome</a></li>
     <li><a href="/myFinances">myFinances</a></li>
@@ -19,4 +22,6 @@
     <li><a href="/myActionables">myActionables</a></li>
 </ul>
 </body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </html>
