--- a/views/myPersonalInfo.ejs
+++ b/views/myPersonalInfo.ejs
@@ -4,23 +4,57 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-
 </head>
 <body>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
-<ul>
-    <li><a href="/">myHome</a></li>
-    <li><a href="/myFinances">myFinances</a></li>
-    <li><a href="/myPersonalInfo">myPersonalInfo</a></li>
-    <li><a href="/myEducation">myEducation</a></li>
-    <li><a href="/myLoans">myLoans</a></li>
-    <li><a href="/myFamily">myFamily</a></li>
-    <li><a href="/myBudget">myBudget</a></li>
-    <li><a href="/myTaxes">myTaxes</a></li>
-    <li><a href="/myActionables">myActionables</a></li>
-</ul>
+<div class="container">
+    <div class="jumbotron" style="font-size:20px;border-radius: 25px;">
+<div style="padding:10px 50px 50px 50px;horiz-align: center">
+    <div class="row" style="text-align: center">
+        <h1>Personal Information</h1>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            <div style="margin:20px;">
+                <div style="border-radius: 15px;background-color: darkgrey;width:360px;height: 230px;">
+                    <div style="border-radius: 20px;float:left;margin: 35px 0px 35px 30px; background-color:blueviolet; width:90px; height:130px;">
+
+                    </div>
+                    <div style="float:left;width:225px;margin-top:55px;margin-bottom:20px;line-height: 27px">
+                        <ul>
+                            <li>Name:------</li>
+                            <li>DOB:-------</li>
+                            <li>Address:---------</li>
+                            <li>Sex:------ </li>
+                            <li>License Number:----</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+            <div style="line-height: 50px">
+                <ul>
+                    <li>Marital Status:</li>
+                    <li>Date of Marital Status Change:</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-6"  style="line-height: 50px">
+
+            <ul>
+                <li>Phone Number:</li>
+                <li>SSN:</li>
+                <li>Email Address:</li>
+                <li>Citizen ?:</li>
+                <li>Legal Residence Before 01-01-2011:</li>
+                <li>Registered for service ?:</li>
+                <li>Drug Conviction Affecting Eligibility:</li>
+            </ul>
+        </div>
+    </div>
+</div>
+        </div>
+    </div>
 </body>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </html>
