--- a/views/myLoans.ejs
+++ b/views/myLoans.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<p>Welcome to <%= data['SAR']['omb'] %></p>
 <ul>
     <li><a href="/">myHome</a></li>
     <li><a href="/myFinances">myFinances</a></li>
