--- a/views/myFamily.ejs
+++ b/views/myFamily.ejs
@@ -2,24 +2,71 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/customstyle.css' />
+    
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
 
 </head>
 <body>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
-<ul>
-    <li><a href="/">myHome</a></li>
-    <li><a href="/myFinances">myFinances</a></li>
-    <li><a href="/myPersonalInfo">myPersonalInfo</a></li>
-    <li><a href="/myEducation">myEducation</a></li>
-    <li><a href="/myLoans">myLoans</a></li>
-    <li><a href="/myFamily">myFamily</a></li>
-    <li><a href="/myBudget">myBudget</a></li>
-    <li><a href="/myTaxes">myTaxes</a></li>
-    <li><a href="/myActionables">myActionables</a></li>
-</ul>
+<div class="columndiv">
+<span >
+<h1 style="text-align:center">Family</h1>
+<div class="testdiv">
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+<p style="text-align:center; margin-top:.2em">Justin Gardner</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$1000</p>
+</div>
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+<p style="text-align:center; margin-top:.2em">Sibling 1</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$1000</p>
+</div>
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+
+<p style="text-align:center; margin-top:.2em">Parents</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$100000</p>
+</div>
+</div>
+</span>
+<span>
+<h1 style="text-align:center">Family</h1>
+<div class="testdiv">
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+<p style="text-align:center; margin-top:.2em">Justin Gardner</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$1000</p>
+</div>
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+<p style="text-align:center; margin-top:.2em">Sibling 1</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$1000</p>
+</div>
+<div class="flex-item-1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
+
+<p style="text-align:center; margin-top:.2em">Parents</p>
+<p style="text-align:center; margin-top:.2em">High School: X</p>
+<p style="text-align:center; margin-top:.2em">College: X</p>
+<p style="text-align:center; margin-top:.2em">Income:$100000</p>
+</div>
+</div>
+</span>
+</div>
 </body>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
