--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,21 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <br>
+    <% include header.ejs %>
     <hr>
-    <ul>
-      <li><a href="/">myHome</a></li>
-      <li><a href="/myFinances">myFinances</a></li>
-      <li><a href="/myPersonalInfo">myPersonalInfo</a></li>
-      <li><a href="/myEducation">myEducation</a></li>
-      <li><a href="/myLoans">myLoans</a></li>
-      <li><a href="/myFamily">myFamily</a></li>
-      <li><a href="/myBudget">myBudget</a></li>
-      <li><a href="/myTaxes">myTaxes</a></li>
-      <li><a href="/myActionables">myActionables</a></li>
-    </ul>
+    <% include myPersonalInfo.ejs%>
+    <hr>
+    <% include myFamily.ejs%>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
