major changes to architecture

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,32 +7,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">FAFSA Companion</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Top</a></li>
-                        <li><a href="#myActionables">myActionables</a></li>
-                        <li><a href="#myFinances">myFinances</a></li>
-                        <li><a href="#myPersonalInfo">myPersonalInfo</a></li>
-                        <li><a href="#myEducation">myEducation</a></li>
-                        <li><a href="#myLoans">myLoans</a></li>
-                        <li><a href="#myFamily">myFamily</a></li>
-                        <li><a href="#myBudget">myBudget</a></li>
-                        <li><a href="#myTaxes">myTaxes</a></li>
-                    </ul>
-                </li>
+                <li><a href="#myActionables">Actionables</a></li>
+                <li><a href="#myPersonalInfo">PersonalInfo</a></li>
+                <li><a href="#myEducation">Education</a></li>
+                <li><a href="#myLoans">Loans</a></li>
+                <li><a href="#myFamily">Family</a></li>
+                <li><a href="#myBudget">Budget</a></li>
+                <li><a href="#myTaxes">Taxes</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+                <li><img alt="Link to Fafsa" src="images/fafsalogo.jpg" href="https://studentaid.ed.gov/sa/"/></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
