--- a/views/myFamily.ejs
+++ b/views/myFamily.ejs
@@ -1,4 +1,4 @@
-<div class="columndiv">
+<div class="columndiv" id="myFamily">
 <span >
 <h1 style="text-align:center">Family</h1>
 <div class="testdiv">
