--- a/views/myPersonalInfo.ejs
+++ b/views/myPersonalInfo.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="myPersonalInfo">
     <div class="jumbotron" style="background-color:gainsboro;font-size:20px;border-radius: 25px;">
         <div style="padding:10px 50px 50px 50px;horiz-align: center">
             <div class="row" style="text-align: center">
