--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,15 @@
   <body>
     <% include header.ejs %>
     <hr>
+    <% include myLoans.ejs %>
+    <hr>
     <% include myPersonalInfo.ejs%>
     <hr>
     <% include myFamily.ejs%>
+    <hr>
+    <% include myTaxes.ejs%>
+    <hr>
+    <% include myEducation.ejs%>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
