--- a/public/stylesheets/customstyle.css
+++ b/public/stylesheets/customstyle.css
@@ -22,7 +22,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     display: flex;
     -webkit-flex-flow: column wrap;
 }
-
+.canvasjs-chart-credit {
+   display: none;
+}
 
 .testdiv{
 	display: -webkit-box;
@@ -32,11 +34,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     flex-wrap: wrap;
     display: flex;
     -webkit-flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: spcae-between;
 		 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,d6d6d7+100 */
 background: #ffffff; /* Old browsers */
-background: -moz-linear-gradient(top, #ffffff 0%, #d6d6d7 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #ffffff 0%,#d6d6d7 100%); /* Chrome10-25,Safari5.1-6 */
+background: -moz-linear-grggradient(top, #ffffff 0%,#d6d6d7 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, #ffffff 0%,#d6d6d7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d6d6d7',GradientType=0 ); /* IE6-9 */
 border: 1px solid grey;
