--- a/views/myLoans.ejs
+++ b/views/myLoans.ejs
@@ -1,12 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><%= title %></title>
+    <title><%= data['LOAN']['ffel_sub'] %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='/stylesheets/customstyle.css' />
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js'></script>
+<script type="text/javascript">
+window.onload = function () {
+    $.get('/myLoans/json').done(function(data){ 
+        console.log(data)
+        var total = parseInt(data['LOAN']['ffel_sub_n']) + parseInt(data['LOAN']['ffel_unsub_n'])
+        var chart1 = new CanvasJS.Chart("chartContainer",
+    {
+        backgroundColor: null,
+        width:275,
+        title:{
+            text: "Balance distribution"
+        },
+                animationEnabled: true,
+        legend:{
+            fontSize:15,
+            verticalAlign: "bottom",
+            horizontalAlign: "center"
+        },
+        data: [
+        {        
+            indexLabelFontSize: 20,
+            indexLabelFontFamily: "Monospace",       
+            indexLabelFontColor: "darkgrey", 
+            indexLabelLineColor: "darkgrey",        
+            indexLabelPlacement: "outside",
+            type: "pie",       
+            showInLegend: true,
+            toolTipContent: "${y} - <strong>#percent%</st rong>",
+            dataPoints: [
+                {  y: total/4, legendText:"Substidized"},
+                {  y: (3*total)/4, legendText:"unSubstidized"},
+            ]
+        }
+        ]
+    });
+    chart1.render();
+    var chart2 = new CanvasJS.Chart("chartContainer2",
+    {
+        backgroundColor: null,
+        width:275,
+        title:{
+            text: "Type of Student Loan"
+        },
+                animationEnabled: true,
+        legend:{
+            fontSize:15,
+            verticalAlign: "bottom",
+            horizontalAlign: "center"
+        },
+        data: [
+        {        
+            indexLabelFontSize: 20,
+            indexLabelFontFamily: "Monospace",       
+            indexLabelFontColor: "darkgrey", 
+            indexLabelLineColor: "darkgrey",        
+            indexLabelPlacement: "outside",
+            type: "pie",       
+            showInLegend: true,
+            toolTipContent: "{y} - <strong>#percent%</strong>",
+            dataPoints: [
+                {  y: parseInt(data['LOAN']['ffel_sub_n']), legendText:"This Year"},
+                {  y: parseInt(data['LOAN']['ffel_unsub_n']), legendText:"Past Years"},
+            ]
+        }
+        ]
+    });
+    chart2.render();
+    var chart3 = new CanvasJS.Chart("chartContainer3",
+    {
+        backgroundColor: null,
+        width:275,
+        title:{
+            text: "Type of Student Loan"
+        },
+                animationEnabled: true,
+        legend:{
+            fontSize:15,
+            verticalAlign: "bottom",
+            horizontalAlign: "center"
+        },
+        data: [
+        {        
+            indexLabelFontSize: 20,
+            indexLabelFontFamily: "Monospace",       
+            indexLabelFontColor: "darkgrey", 
+            indexLabelLineColor: "darkgrey",        
+            indexLabelPlacement: "outside",
+            type: "pie",       
+            showInLegend: true,
+            toolTipContent: "{y} - <strong>#percent%</strong>",
+            dataPoints: [
+                {  y: parseInt(data['LOAN']['ffel_sub_n']), legendText:"This Year"},
+                {  y: parseInt(data['LOAN']['ffel_unsub_n']), legendText:"Past Years"},
+            ]
+        }
+        ]
+    });
+    chart3.render();
 
+
+
+     });
+}
+</script>
 </head>
 <body>
+<div class="testdiv">
+<div id="chartContainer" style="height: 200px; width: auto; display:inline-block;margin:0 5em">
+</div>
+
+<div id="chartContainer2" style="height: 200px; width: auto; display:inline-block;margin:0 5em">
+</div>
+
+<div id="chartContainer3" style="height: 200px; width: auto;display:inline-block; margin:0 5em"></div>
+</div>
 <h1><%= title %></h1>
 <p>Welcome to <%= data['SAR']['omb'] %></p>
 <ul>
