single page architecture

--- a/views/myPersonalInfo.ejs
+++ b/views/myPersonalInfo.ejs
@@ -7,10 +7,11 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div style="margin:20px;">
+                        <img src="images/dl.png" data-toggle="collapse" data-target="#pInfo #pInfo2">
                         <div style="border-radius: 15px;background-color: darkgrey;width:360px;height: 230px;" data-toggle="collapse" data-target="#pInfo">
                             <div style="border-radius: 20px;float:left;margin: 35px 0px 35px 30px; background-color:blueviolet; width:90px; height:130px;">
 
-                            </div>
+                        </div>
                             <div style="font-size:16px;float:left;width:225px;margin-top:45px;margin-bottom:20px;line-height: 24px">
                                 <ul style="list-style: none;">
                                     <li><strong>Name: </strong><%= data['USER']['name'] %></li>
@@ -31,7 +32,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-6"  style="line-height: 60px">
+                <div class="col-lg-6"  style="line-height: 60px" id="pInfo2" class="collapse">
 
                     <ul style="list-style: none;">
                         <li>&nbsp</li>
