--- a/views/myBudget.ejs
+++ b/views/myBudget.ejs
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-
-</head>
-<body>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
-<ul>
-    <li><a href="/">myHome</a></li>
-    <li><a href="/myFinances">myFinances</a></li>
-    <li><a href="/myPersonalInfo">myPersonalInfo</a></li>
-    <li><a href="/myEducation">myEducation</a></li>
-    <li><a href="/myLoans">myLoans</a></li>
-    <li><a href="/myFamily">myFamily</a></li>
-    <li><a href="/myBudget">myBudget</a></li>
-    <li><a href="/myTaxes">myTaxes</a></li>
-    <li><a href="/myActionables">myActionables</a></li>
-</ul>
-</body>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-</html>
+<div class="container">
+    <div class="jumbotron" style="background-color:gainsboro;font-size:20px;border-radius: 25px;">
+        <h1>Budget</h1>
+    </div>
+</div>
