--- a/views/myActionables.ejs
+++ b/views/myActionables.ejs
@@ -1,5 +1,3 @@
-<div class="container">
-    <div class="jumbotron" style="background-color:gainsboro;font-size:20px;border-radius: 25px;">
+<div class="testdiv">
         <h1>Actionables</h1>
-    </div>
 </div>
