--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">FAFSA Companion</a>
+            <img alt="Link to Fafsa" src="images/fafsa logo.png" href="https://studentaid.ed.gov/sa/" style="height:4em"/>
         </div>
         <div id="navbar" style="margin:auto" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
