--- a/views/myLoans.ejs
+++ b/views/myLoans.ejs
@@ -114,6 +114,7 @@ window.onload = function () {
 </script>
 </head>
 <body>
+<h1 style="text-align:center !important">Loan Data</h1>
 <div class="testdiv">
 <div class="space" id="chartContainer" style="height: 200px; width: 10em; display:inline-block;margin:0 5em">
 </div>
