education and family tyler

--- a/views/myFamily.ejs
+++ b/views/myFamily.ejs
@@ -16,7 +16,7 @@
 <span >
 <h1 style="text-align:center">Family</h1>
 <div class="testdiv" class="columndiv" class="row">
-<div class="flex-item-1" data-toggle="collapse" data-target="#parent1"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#parent1"><img src="images/mom with form-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
 <p style="text-align:center; margin-top:.2em">Parent 1</p>
 <p style="text-align:center; margin-top:.2em"><strong>High School:</strong> Yes</p>
@@ -24,7 +24,7 @@ max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"
 <p style="text-align:center; margin-top:.2em"><strong>Income:</strong> <%=data["PARENT"]["parent1_income"]%></p>
 </div>
 
-<div class="flex-item-1" data-toggle="collapse" data-target="#parent2"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#parent2"><img src="images/dad with form-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
 <p style="text-align:center; margin-top:.2em">Parent 2</p>
 <p style="text-align:center; margin-top:.2em"><strong>High School:</strong> <%=data["USER"]["parent2_ed"]%></p>
@@ -32,7 +32,7 @@ max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"
 <p style="text-align:center; margin-top:.2em"><strong>Income:</strong> <%=data["PARENT"]["parent2_income"]%></p>
 </div>
 
-<div class="flex-item-1" data-toggle="collapse" data-target="#siblings"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#siblings"><img src="images/sister-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
 <p style="text-align:center; margin-top:.2em">Siblings</p>
 <p style="text-align:center; margin-top:.2em"><strong>College:</strong> <%=data["PARENT"]["num_fam_college"]%></p>
