--- a/views/myPersonalInfo.ejs
+++ b/views/myPersonalInfo.ejs
@@ -20,7 +20,7 @@
                         <li><strong>Email Address: </strong><%= data['USER']['email'] %></li>
                     </ul>
                 </div>
-                <div class="row collapse" id="pInfo" data-toggle="collapse" data-target="#pInfo" style="line-height:5em;">
+                <div class="row collapse" id="pInfo" style="line-height:5em;">
                     <div class="col-lg-1"><p></p></div>
                     <div class="col-lg-5">
                         <ul style="list-style:none;">
