--- a/views/myEducation.ejs
+++ b/views/myEducation.ejs
@@ -2,19 +2,22 @@
         <span >
 <h1 style="text-align:center">Education</h1>
 <div class="testdiv" class="columndiv" class="row">
-<div class="flex-item-1" data-toggle="collapse" data-target="#highschool"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#highschool"><img src="images/high school building-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
 <p style="text-align:center; margin-top:.2em">High School</p>
     <p style="text-align:center; margin-top:.2em"><strong>High School:</strong> <%=data["USER"]["hs_name"]%></p>
 <p style="text-align:center; margin-top:.2em"><strong>Completed:</strong> <%=data["USER"]["hs_complete"]%></p>
 </div>
-<div class="flex-item-1" data-toggle="collapse" data-target="#colleges"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#colleges"><img src="images/college building-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
-<p style="text-align:center; margin-top:.2em">College</p>
+<p style="text-align:center; margin-top:.2em">Completed</p>
+  <p style="text-align:center; margin-top:.2em"><strong>College:</strong> Princton</p>
 </div>
-<div class="flex-item-1" data-toggle="collapse" data-target="#degree"><img src="http://images.all-free-download.com/images/graphiclarge/man_silhouette_clip_art_9510.jpg" style="max-width:80%;
+<div class="flex-item-1" data-toggle="collapse" data-target="#degree"><img src="images/college building-01.png" style="max-width:80%;
 max-height:80%; display:block; margin:auto; margin-top:.2em; border-radius:20px"/>
-<p style="text-align:center; margin-top:.2em">Degree Progress</p>
+  <p style="text-align:center; margin-top:.2em">In Progress</p>
+  <p style="text-align:center; margin-top:.2em"><strong>College:</strong> Virginia Commonwealth University</p>
+
 </div>
 <div>
   <div id="colleges" class="collapse">
