changes to header and alert:

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,8 +14,8 @@
                 <li class="active"><a href="#top">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#myActionables">Actionables</a></li>
-                <li><a href="#myPersonalInfo">PersonalInfo</a></li>
+                <li><a href="#myActionables">Alerts</a></li>
+                <li><a href="#myPersonalInfo">Personal Info</a></li>
                 <li><a href="#myEducation">Education</a></li>
                 <li><a href="#myLoans">Loans</a></li>
                 <li><a href="#myFamily">Family</a></li>
