--- a/views/myActionables.ejs
+++ b/views/myActionables.ejs
@@ -1,3 +1,16 @@
-<div class="testdiv">
-        <h1>Actionables</h1>
+<div class="testdiv" style="
+	display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    flex-wrap: wrap;
+    display: flex;
+    -webkit-flex-direction: column;
+    justify-content: space-around;
+	text-align: center;
+	font-weight:bold;
+	">
+        <h1>Alerts</h1><br/>
+		<p>1) Please review your email (Line 13) and make sure it is up to date</p>
+		<p>2) Please review your phone number (Line 10) and make sure it is up to date</p>
 </div>
