added before from tyler

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,16 +11,13 @@
         </div>
         <div id="navbar" style="margin:auto" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#top">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#myActionables">Alerts</a></li>
-                <li><a href="#myPersonalInfo">Personal Info</a></li>
-                <li><a href="#myEducation">Education</a></li>
-                <li><a href="#myLoans">Loans</a></li>
-                <li><a href="#myFamily">Family</a></li>
-                <li><a href="#myBudget">Budget</a></li>
-                <li><a href="#myTaxes">Taxes</a></li>
+                <li class="active"><a href="/#top">Home</a></li>
+                <li><a href="before">Before Our App</a></li>
+                <li><a href="/#myActionables">Alerts</a></li>
+                <li><a href="/#myPersonalInfo">Personal Info</a></li>
+                <li><a href="/#myEducation">Education</a></li>
+                <li><a href="/#myLoans">Loans</a></li>
+                <li><a href="/#myFamily">Family</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><img alt="Link to Fafsa" src="images/fafsalogo.jpg" href="https://studentaid.ed.gov/sa/" style="height:4em"/></li>
