--- a/views/myLoans.ejs
+++ b/views/myLoans.ejs
@@ -114,7 +114,7 @@ window.onload = function () {
 </head>
 <body>
 <h1 style="text-align:center !important">Loan Data</h1>
-<div class="testdiv">
+<div class="testdiv" id="#myLoans">
 <div id="chartContainer3" style="height:20em; width:20em;"></div>
 <div id="chartContainer2" style="height:20em; width:20em;"></div>
 <div id="chartContainer"style="height:20em; width:20em;"></div>
