minor fixes from tyler

--- a/views/myActionables.ejs
+++ b/views/myActionables.ejs
@@ -10,7 +10,7 @@
 	text-align: center;
 	font-weight:bold;
 	">
-        <h1 id="#myActionables">Alerts</h1><br/>
+        <h1>Alerts</h1><br/>
 		<p>1) Please review your email (Line 13) and make sure it is up to date</p>
 		<p>2) Please review your phone number (Line 10) and make sure it is up to date</p>
 </div>
